{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "9ab8b4dd-577e-451f-9e9a-b6c8a15ae3f1",
            "actions": [
                {
                    "name": "HookGrab",
                    "type": "Button",
                    "id": "e81f07fc-eedd-4e7d-a4be-9a70928be582",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HookAttack",
                    "type": "Button",
                    "id": "53ec917c-afba-4490-9c1a-6b7ec8e3f036",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5b0fbc62-a1ba-4b27-8a3d-14b9b827a1f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "5201e639-1ad7-4825-a194-9ab64ae570a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b4abaab-77cf-4d00-9cae-40882adc7ba7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "HookGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79a12d78-c010-4305-bc1c-fe02258b27fc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "HookAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d52121af-0b83-40bb-8422-71c403df1e7d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b9781d0-377a-45aa-88a6-eece74bfa66c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Desktop",
            "bindingGroup": "Desktop",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}